--- a/.env
+++ b/.env
@@ -28,3 +28,12 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/blablanews?serverVersion=8.0.32&chars
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+MAILER_DSN=gmail://yoann.piard@gmail.com:cxpjevyseuxolhvy@default
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
